css/main.css
@font-face {
	font-family: Walsheim;
	src: url(../fonts/GT-Walsheim-Thin-Trial.otf);
}

@font-face {
	font-family: Walsheim-bold;
	src: url(../fonts/GT-Walsheim-Bold-Trial.otf);
	font-weight: bold;
}

* {
	box-sizing: border-box;
	font-family: Walsheim;
	line-height: 1.3;
	color: white;
}

html {
	background: #201F3F;
}

body {
	max-width: 1200px;
	margin: 0 auto;
}

h1 {
	font-size: 36px;
}

h2 {
	font-size: 24px;
}

h3 {
	margin-bottom: 4px;
	font-size: 18px;
	font-family: Walsheim-bold;
}

p {
	margin-top: 4px;
	font-size: 18px;
}

.margin-bottom {
	margin-bottom: 24px;
}

.bold {
	font-family: Walsheim-bold;
}

button {
	padding: 16px 24px;
	margin-right: 16px;
	border-radius: 4px;
	font-family: Walsheim-bold;
	font-size: 16px;
	color: white;
	background: #343265;
	border: none;
	cursor: pointer;
}

.container {
	display: flex;
	flex-direction: row;
}

.column {
	width: 50%;
	padding: 24px;
}

.projects {
	display: flex;
	flex-wrap: wrap;
	flex-direction: row;
}

.hat {
	height: 75px;
}

.project {
	flex: 0 50%;
	padding-right: 24px;
	margin-bottom: 32px;
	position: relative;
	display: block;
	cursor: pointer;
	z-index: 1;
}

.project:after {
	content: "";
    position: absolute;
    width: 100%;
    height: 0px;
    background: transparent;
    border: 1px solid transparent;
    top: 50%;
    left: -4%;
    border-radius: 4px;
    transition: 0.2s ease;
}

.project:hover:after {
	top: 0;
	height: 97%;
	border: 1px solid #fff;
}

#buttons {
	margin-top: 32px;
	float: left;
}

.bg1, .bg2, .bg3, .bg4, .bg5, .bg6, .bg7, .bg8 {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background: #201F3F;
	z-index: -2;
	transition: 0.2s ease;
}

.slo:hover + .bg1{
	background: #1E8E3E;
	z-index: -1;
}

.irm:hover + .bg2{
	background: #D93025;
	z-index: -1;
}

.entale:hover + .bg3{
	background: #FF7B6E;
	z-index: -1;
}

.jaas:hover + .bg4{
	background: #054559;
	z-index: -1;
}

.notetab:hover + .bg5{
	background: #253958;
	z-index: -1;
}

.gene:hover + .bg6{
	background: #21A1F3;
	z-index: -1;
}

.cell:hover + .bg7{
	background: #346699;
	z-index: -1;
}

.cohese:hover + .bg8{
	background: #01D6DD;
	z-index: -1;
}

@media only screen and (max-width: 960px) {
	.container {
		flex-direction: column;
	}

	.column {
		width: 100%;
	}

	.projects {
		flex-direction: column;
	}

	.project {
		flex: 0 100%;
	}
}

